# flashalpha-fill-simulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SPEC.md
docs/examples/: 01_per_bar_primitive.py
scripts/: fetch_real_data.py
src/fillsim/: __init__.py  config.py  core.py  entry.py  exit.py  filters.py
src/fillsim/_internal/: __init__.py
src/fillsim/providers/: __init__.py  base.py  csv.py  memory.py
tests/: conftest.py  test_config_filters_providers.py  test_expiry_settlement.py  test_properties.py  test_real_data_integration.py  test_simulate_fill.py  test_simulate_fills_loop.py  test_simulate_patient_exit.py
tests/fixtures/: real_data_loader.py  synthetic_chains.py
tests/fixtures/real_data/: spy_2024_06_03.json
