[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "flashalpha-fill-simulator"
version = "0.2.1"
description = "Realistic limit-order fill simulator for options credit/debit spreads. Engine-agnostic, data-source-agnostic."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "FlashAlpha" },
]
keywords = [
    "options", "backtest", "fill-simulator", "credit-spread",
    "market-making", "execution", "quantconnect", "limit-order",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = []  # zero runtime dependencies — pure stdlib

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4", "hypothesis>=6"]
dev  = ["ruff>=0.5", "mypy>=1.8"]

[project.urls]
Homepage      = "https://github.com/FlashAlpha-lab/flashalpha-fill-simulator"
Documentation = "https://github.com/FlashAlpha-lab/flashalpha-fill-simulator/blob/master/docs/SPEC.md"
Repository    = "https://github.com/FlashAlpha-lab/flashalpha-fill-simulator"
Issues        = "https://github.com/FlashAlpha-lab/flashalpha-fill-simulator/issues"
Changelog     = "https://github.com/FlashAlpha-lab/flashalpha-fill-simulator/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/fillsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/fillsim"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
strict = true
python_version = "3.10"
